# fintrack-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  syllabus.md
alembic/: env.py
alembic/versions/: ece36327029a_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: README.md  __init__.py  account.py  budget.py  category.py  transaction.py  user.py
app/routers/: README.md  accounts.py  analytics.py  auth.py  budgets.py  categories.py  transactions.py
app/schemas/: README.md  account.py  analytics.py  budget.py  category.py  transaction.py  user.py
docs/: error_handling.md
scripts/: seed.py
tests/: README.md  conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_budgets.py  test_categories.py  test_transactions.py
