[tool.poetry]
name = "fintrack-api"
version = "0.1.0"
description = "Personal finance tracker API — FastAPI + PostgreSQL tutorial project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.7.0"
PyJWT = {extras = ["crypto"], version = "^2.10.0"}
bcrypt = "^4.0.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"